Footer mit legal & social media hinzugefügt

--- a/index.html
+++ b/index.html
@@ -6,11 +6,24 @@
 </header>
 
 <body>
-    body
+    <iframe src="https://discord.com/widget?id=882608782046285904&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body>
 
 <footer>
-    footer
+
+    <ul style="float:right"><h4>Legal</h4>
+        <li><a href="https://www.instagram.com/">Impressum</a></li>
+        <li><a href="https://www.facebook.com/">Datenschutz</a></li>
+        <li><a href="https://github.com/Staubtornado/kotmasters">Allgemeine Geschäftsbedingungen</a></li>
+    </ul>  
+
+    <ul style="float:right"><h4>Social Media</h4>
+        <li><a href="https://www.instagram.com/">Instagram</a></li>
+        <li><a href="https://www.facebook.com/">Facebook</a></li>
+        <li><a href="https://github.com/Staubtornado/kotmasters">Github</a></li>
+        <li><a href="https://twitter.com/">Twitter</a></li>
+    </ul>    
+   
 </footer>
 
 </html>
