--- a/index.html
+++ b/index.html
@@ -27,16 +27,29 @@
     <p>A Kotmasters working projekt &copy;</p>
     <p><em>Kot, schnell, günstig und professionell</em></p>
   </header>
-  <body></body>
-  <footer>
+  <body>
+  </body>
+      
+  <style>
+    .footer {
+      background: #776b6b93;
+      height: 200px; 
+    }
+    #list {
+      background-color:#b00b69;
+    }
+  </style>
 
-    <ul style="float:right"><h4>Legal</h4>
-        <li><a href="https://www.instagram.com/">Impressum</a></li>
-        <li><a href="https://www.facebook.com/">Datenschutz</a></li>
-        <li><a href="https://github.com/Staubtornado/kotmasters">Allgemeine Geschäftsbedingungen</a></li>
+  <footer class="footer">
+
+    <ul id="list" style="float:right"><h4>SERVICE</h4>
+        <li><a href="">Impressum</a></li>
+        <li><a href="">Datenschutzerklärung</a></li>
+        <li><a href="">AGB</a></li>
+        <li><a href="">FAQ</a></li>
     </ul>  
 
-    <ul style="float:right"><h4>Social Media</h4>
+    <ul id="list" style="float:right"><h4>SOCIAL MEDIA</h4>
         <li><a href="https://www.instagram.com/">Instagram</a></li>
         <li><a href="https://www.facebook.com/">Facebook</a></li>
         <li><a href="https://github.com/Staubtornado/kotmasters">Github</a></li>
