--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Dies ist unsere erste Website. Sie ist eigentlich nur ein Werterechner, aber eigentlich schon cool"
+      content="Welcome to the Kot. Dies ist die offizielle Kotmasters Website. Erkunden sie unsere angebote."
     />
     <title>Kotmasters V1</title>
     <link rel="shortcut icon" href="icon.ico" />
+
+
     <style>
       body {
         background-color: white;
@@ -21,13 +23,48 @@
         color: #b00b69;
       }
     </style>
+
+
   </head>
-  <header>
-    <img class="Logo" src="Logo.png" />
-    <p>A Kotmasters working projekt &copy;</p>
-    <p><em>Kot, schnell, günstig und professionell</em></p>
-  </header>
   <body>
+
+    <header>
+
+      <style>
+        @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap');
+        *{
+          box-sizing: border-box;
+          margin: 0;
+          padding: 0;
+          background-color: #b00b69;
+        }
+        li, a, button {
+          font-family: "Monserate", sans-serif;
+          font-weight: 500;
+          font-size: 16px;
+          color: #edf0f1;
+          text-decoration: none; 
+        }
+        header{
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding: 30px 10%;
+        }
+        
+      </style>
+
+      <img class="logo"  src="logo.png" alt="logo">
+      <nav>
+        <ul class="nav__links">
+          <li><a href="#">Services</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Projects</a></li>
+        </ul>
+      </nav>
+      <a class="cta" href="#"><button>Contact</button></a>
+    </header>
+
   </body>
       
   <style>
