Fixed image name

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         
       </style>
 
-      <img class="logo"  src="logo.png" alt="logo">
+      <img class="logo"  src="Logo.png" alt="Logo">
       <nav>
         <ul class="nav__links">
           <li><a href="#">Services</a></li>
@@ -67,7 +67,7 @@
 
   </body>
       
-  <style>
+  <!style>
     .footer {
       background: #776b6b93;
       height: 200px; 
@@ -75,18 +75,18 @@
     #list {
       background-color:#b00b69;
     }
-  </style>
+  <!/style>
 
   <footer class="footer">
 
-    <ul id="list" style="float:right"><h4>SERVICE</h4>
+    <ul style="float:right"><h4>SERVICE</h4>
         <li><a href="">Impressum</a></li>
         <li><a href="">Datenschutzerklärung</a></li>
         <li><a href="">AGB</a></li>
         <li><a href="">FAQ</a></li>
     </ul>  
 
-    <ul id="list" style="float:right"><h4>SOCIAL MEDIA</h4>
+    <ul style="float:right"><h4>SOCIAL MEDIA</h4>
         <li><a href="https://www.instagram.com/">Instagram</a></li>
         <li><a href="https://www.facebook.com/">Facebook</a></li>
         <li><a href="https://github.com/Staubtornado/kotmasters">Github</a></li>
