--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       </style>
 
-      <img class="logo"  src="logo.png" alt="logo">
+      <img class="logo"  src="Logo.png" alt="logo">
       <nav>
         <ul class="nav__links">
           <li><a href="#">Services</a></li>
