--- a/index.html
+++ b/index.html
@@ -35,18 +35,55 @@
     }
   </style>
   <footer class="footer">
-    <ul id="list" style="float:right"><h4>SERVICE</h4>
+
+    <style>
+      li, a {
+        font-family: "Monserate", sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        color: #edf0f1;
+        text-decoration: none; 
+      }
+      header{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 30px 10%;
+      }
+      .logo {
+        cursor: pointer;
+      }
+
+      .nav__links{
+        list-style: none;
+      }
+
+      .nav__links li{
+        display: inline-block;
+        padding: 0px 20px;
+      }
+
+      .nav__links li a{
+        transition: all 0.3s ease 0s;
+      }
+      .nav__links li a:hover{
+        color: #05ffff;
+      }
+    </style>
+
+    <ul class="nav__links" style="float:right"><h4>SERVICE</h4>
         <li><a href="">Impressum</a></li>
         <li><a href="">Datenschutzerklärung</a></li>
         <li><a href="">AGB</a></li>
         <li><a href="">FAQ</a></li>
     </ul>  
 
-    <ul id="list" style="float:right"><h4>SOCIAL MEDIA</h4>
+    <ul class="nav__links" style="float:right"><h4>SOCIAL MEDIA</h4>
         <li><a href="https://www.instagram.com/">Instagram</a></li>
         <li><a href="https://www.facebook.com/">Facebook</a></li>
         <li><a href="https://github.com/Staubtornado/kotmasters">Github</a></li>
         <li><a href="https://twitter.com/">Twitter</a></li>
     </ul>    
+   
   </footer>
 </html>
