Fixed css implementation

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     />
     <title>Kotmasters V1</title>
     <link rel="shortcut icon" href="icon.ico" />
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
-  <style href="stylesheet.css"></style>
   <body>
     <header>
       <img class="logo"  src="Logo.png" alt="logo">
@@ -25,15 +25,6 @@
     </header>
     <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, perspiciatis nihil. Quas temporibus quo asperiores nam quisquam ad, tempora eos quis commodi, ipsa blanditiis non voluptas quos error autem libero, ullam nemo similique eum. Rem ducimus vel nam. Error voluptates iste esse at fugiat, animi vel maxime. Minus nobis corporis blanditiis autem voluptates voluptatem quam obcaecati error repudiandae incidunt iusto eum, rerum aliquam aperiam aut consequatur molestiae vero sint neque saepe facere maxime ut qui quaerat! Fugiat, ut? Placeat omnis dolor laboriosam, quia minus dicta aspernatur, ea expedita eum modi commodi fuga nisi quidem architecto. Eveniet sunt sed doloribus porro.</P>
   </body>   
-  <style>
-    .footer {
-      background: #776b6b93;
-      height: 200px; 
-    }
-    #list {
-      background-color:#b00b69;
-    }
-  </style>
   <footer class="footer">
 
     <style>
