--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <footer class="footer">
 
-    <ul class="nav__links" style="float:center">
+    <ul class="nav__links">
         <li><a href="https://www.instagram.com/" class="fa fa-instagram"></a></li>
         <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
         <li><a href="https://github.com/Staubtornado/kotmasters" class="fa fa-github"></a></li>
