--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </ul> 
 
     <ul class="nav__links">
-        <li><a href="">Impressum</a></li>
+        <li><a href="https://staubtornado.github.io/kotmasters/templates/legal/imprint.html">Impressum</a></li>
         <li><a href="">Datenschutzerklärung</a></li>
         <li><a href="">AGB</a></li>
         <li><a href="">FAQ</a></li>
