--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <ul class="nav__links">
         <li><a href="https://staubtornado.github.io/kotmasters/templates/legal/imprint.html">Impressum</a></li>
-        <li><a href="">Datenschutzerklärung</a></li>
+        <li><a href="https://staubtornado.github.io/kotmasters/templates/legal/datenschutzerklaerung.html">Datenschutzerklärung</a></li>
         <li><a href="">AGB</a></li>
         <li><a href="">FAQ</a></li>
     </ul>  
