--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
     <link rel="shortcut icon" href="icon.ico" />
     <link rel="stylesheet" href="stylesheet.css">
   </head>
-  <body>
+
     <header>
-      <img class="logo"  src="Logo.png" alt="logo">
+      
+      <a class="logo__font" href=""><img class="logo" src="Logo.png" alt="logo"> Kotmasters</a>
+
+      <!-- <img  class="logo"  src="Logo.png" alt="logo"> -->
+      <!-- <a href=""><h1>Kotmasters</h1></a> -->
       <nav>
         <ul class="nav__links">
           <li><a href="#">Services</a></li>
@@ -24,7 +28,10 @@
       </nav>
       <a class="cta" href="#"><button>Contact</button></a>
     </header>
-    <img class=Banner src="Kotbanner.png" alt="Banner">
+    
+
+  <body>
+    <!-- <img class=Banner src="Kotbanner.png" alt="Banner"> -->
   </body>   
 
   <footer class="footer">
@@ -40,8 +47,8 @@
     <ul class="nav__links">
         <li><a href="https://staubtornado.github.io/kotmasters/templates/legal/imprint.html">Impressum</a></li>
         <li><a href="https://staubtornado.github.io/kotmasters/templates/legal/datenschutzerklaerung.html">Datenschutzerklärung</a></li>
-        <li><a href="">AGB</a></li>
-        <li><a href="">FAQ</a></li>
+        <li><a href="">AGB</a></li> <!-- Depreciated -->
+        <li><a href="">FAQ</a></li> <!-- Depreciated -->
     </ul>  
    
   </footer>
