--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Welcome to the Kot. Dies ist die offizielle Kotmasters Website. Erkunden sie unsere angebote."
+      content="Welcome to the Kot. Dies ist die offizielle Kotmasters Website. Erkunden sie unsere Angebote."
     />
     <title>Kotmasters V1</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
