--- a/index.html
+++ b/index.html
@@ -1,56 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Welcome to the Kot. Dies ist die offizielle Kotmasters Website. Erkunden sie unsere Angebote."
-    />
-    <title>Kotmasters V1</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="icon.ico" />
-    <link rel="stylesheet" href="stylesheet.css">
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta
+    name="description"
+    content="Welcome to the Kot. Dies ist die offizielle Kotmasters Website. Erkunden sie unsere Angebote."
+  />
+  <title>Kotmasters V1</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="shortcut icon" href="icon.ico" />
+  <link rel="stylesheet" href="stylesheet.css">
+</head>
 
-  <header>
-    <img class="Logo" src="Logo.png" />
-    <p>A Kotmasters working projekt &copy;</p>
-    <p><em>Kot, schnell, günstig und professionell</em></p>
-  </header>
-  <body>
-    
-    <p class="infotext">
-      Willkommen auf der Seite der Kotmasters. Wir sind ein deutsches Entwicklerstudio und arbeiten seit unserer Gründung im September 2021 an kleinen Java Programmen, Python Skripten und Webdesign mit HTML und CSS. Ab 2022 planen wir einen Einstieg in die Spieleindustrie und ab 2025 wollen wir Vorreiter in der deutschsprachigen Spiele- und Softwareentwicklung sein. Weitere Informationen findest du 
-        <a href=""><u>hier</u></a>.
-        <div class="infotext__unterschrift">- Kotmasters 2021</div>
-    </p> 
+<header>
+
+  <a class="logo__font" href=""><img class="logo" src="Logo.png" alt="logo"> Kotmasters</a>
+
+  <!-- <img  class="logo"  src="Logo.png" alt="logo"> -->
+  <!-- <a href=""><h1>Kotmasters</h1></a> -->
+  <nav>
+    <ul class="nav__links">
+      <li><a href="">Services</a></li>
+      <li><a href="">About</a></li>
+  </nav>
+  <a class="cta" href="#"><button>Contact</button></a>
+</header>
+
+<body>
+  <p class="infotext">
+    Willkommen auf der Seite der Kotmasters. Wir sind ein deutsches Entwicklerstudio und arbeiten seit unserer Gründung im September 2021 an kleinen Java Programmen, Python Skripten und Webdesign mit HTML und CSS. Ab 2022 planen wir einen Einstieg in die Spieleindustrie und ab 2025 wollen wir Vorreiter in der deutschsprachigen Spiele- und Softwareentwicklung sein. Weitere Informationen findest du 
+      <a href=""><u>hier</u></a>.
+      <div class="infotext__unterschrift">- Kotmasters 2021</div>
+  </p> 
 
 
-    <ul class="short_summary">
-      <li><img src="project_1.png" alt="project_1"><a class="short_summary__font" href=""><strong>Offizielle Website</strong></a></li>
-      <li><img src="project_2.png" alt="project_2"><a class="short_summary__font" href=""><strong>Werterechner</strong></a></li>
-    </ul>
+  <ul class="short_summary">
+    <li><img src="project_1.png" alt="project_1"><a class="short_summary__font" href=""><strong>Offizielle Website</strong></a></li>
+    <li><img src="project_2.png" alt="project_2"><a class="short_summary__font" href=""><strong>Werterechner</strong></a></li>
+  </ul>
     
     <!-- <img class=Banner src="Kotbanner.png" alt="Banner"> -->
-  </body>   
+</body>   
 
-  <footer class="footer">
+<footer class="footer">
 
-    <ul class="nav__links">
-        <li><a href="https://www.instagram.com/" class="fa fa-instagram"></a></li>
-        <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
-        <li><a href="https://github.com/Staubtornado/kotmasters" class="fa fa-github"></a></li>
-        <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
-        <li><a href="https://www.reddit.com/" class="fa fa-reddit-alien"></a></li>
-    </ul> 
+  <ul class="nav__links">
+      <li><a href="https://www.instagram.com/" class="fa fa-instagram"></a></li>
+      <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
+      <li><a href="https://github.com/Staubtornado/kotmasters" class="fa fa-github"></a></li>
+      <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
+      <li><a href="https://www.reddit.com/" class="fa fa-reddit-alien"></a></li>
+  </ul> 
 
 
-    <ul class="nav__links">
-        <li><a href="https://staubtornado.github.io/kotmasters/templates/legal/imprint.html">Impressum</a></li>
-        <li><a href="https://staubtornado.github.io/kotmasters/templates/legal/datenschutzerklaerung.html">Datenschutzerklärung</a></li>
-        <li><a href="">AGB</a></li> <!-- Depreciated -->
-    </ul>  
-   
-  </footer>
+  <ul class="nav__links">
+      <li><a href="https://staubtornado.github.io/kotmasters/templates/legal/imprint.html">Impressum</a></li>
+      <li><a href="https://staubtornado.github.io/kotmasters/templates/legal/datenschutzerklaerung.html">Datenschutzerklärung</a></li>
+      <li><a href="">AGB</a></li> <!-- Depreciated -->
+  </ul>  
+  
+</footer>
 </html>
