Code cleanup and adjustments

--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
 
 <header>
 
-  <a class="logo__font" href=""><img class="logo" src="Logo.png" alt="logo"> Kotmasters</a>
+<div>
+  <img class="logo" src="Logo.png" alt="logo">
+  <a class="logo__font" href="">Kotmasters</a>
+</div>
 
-  <!-- <img  class="logo"  src="Logo.png" alt="logo"> -->
-  <!-- <a href=""><h1>Kotmasters</h1></a> -->
   <nav>
     <ul class="nav__links">
       <li><a href="">Services</a></li>
       <li><a href="">About</a></li>
+      <li><a href="">Project</a></li>
   </nav>
-  <a class="cta" href="#"><button>Contact</button></a>
+  <a class="cta" href=""><button>Contact</button></a>
+
 </header>
 
 <body>
