--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <ul class="nav__links">
       <li><a href="">Services</a></li>
       <li><a href="">About</a></li>
-      <li><a href="">Project</a></li>
+      <li><a href="">Projects</a></li>
   </nav>
   <a class="cta" href=""><button>Contact</button></a>
 
