--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <nav>
     <ul class="nav__links">
       <li><a href="">Services</a></li>
-      <li><a href="">About</a></li>
+      <li><a href="https://staubtornado.github.io/kotmasters/templates/pages/about.html">About</a></li>
       <li><a href="">Projects</a></li>
   </nav>
   <a class="cta" href=""><button>Contact</button></a>
@@ -37,25 +37,22 @@
       <div class="infotext__unterschrift">- Kotmasters 2021</div>
   </p> 
 
-
   <ul class="short_summary">
     <li><img src="project_1.png" alt="project_1"><a class="short_summary__font" href=""><strong>Offizielle Website</strong></a></li>
     <li><img src="project_2.png" alt="project_2"><a class="short_summary__font" href=""><strong>Werterechner</strong></a></li>
   </ul>
     
-    <!-- <img class=Banner src="Kotbanner.png" alt="Banner"> -->
 </body>   
 
 <footer class="footer">
 
-  <ul class="nav__links">
-      <li><a href="https://www.instagram.com/" class="fa fa-instagram"></a></li>
-      <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
-      <li><a href="https://github.com/Staubtornado/kotmasters" class="fa fa-github"></a></li>
-      <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
-      <li><a href="https://www.reddit.com/" class="fa fa-reddit-alien"></a></li>
-  </ul> 
-
+  <ul class="fa">
+    <li><a href="https://www.instagram.com/" class="fa fa-instagram"></a></li>
+    <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
+    <li><a href="https://github.com/Staubtornado/kotmasters" class="fa fa-github"></a></li>
+    <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
+    <li><a href="https://www.reddit.com/" class="fa fa-reddit-alien"></a></li>
+</ul>  
 
   <ul class="nav__links">
       <li><a href="https://staubtornado.github.io/kotmasters/templates/legal/imprint.html">Impressum</a></li>
