Added java script for continuity

--- a/content/legal/datenschutzerklaerung.html
+++ b/content/legal/datenschutzerklaerung.html
@@ -8,9 +8,15 @@
     />
     <title>Kotmasters | Datenschutzerklärung</title>
     <link rel="shortcut icon" href="https://staubtornado.github.io/kotmasters/icon.ico" />
-    <!-- <link rel="stylesheet" href="./stylesheet.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://staubtornado.github.io/kotmasters/stylesheet.css">
 
 </head>
+
+<header>    
+    <script src="/loadHeader.js"></script> 
+</header>
+
 <body>
     <h1>Datenschutzerklärung</h1>
     <p>Verantwortlicher im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutzgrundverordnung (DSGVO), ist:</p>
@@ -90,4 +96,9 @@
     <p></p><p><em>Die Datenschutzerklärung wurde mithilfe der activeMind AG erstellt, den Experten für <a href="https://www.activemind.de/datenschutz/datenschutzbeauftragter/" target="_blank" rel="noopener">externe Datenschutzbeauftragte</a> (Version #2020-09-30).</em></p>
 
 </body>
+
+<footer class="footer">
+    <script src="/loadFooter.js"></script> 
+  </footer>
+
 </html>
