--- a/content/legal/imprint.html
+++ b/content/legal/imprint.html
@@ -8,9 +8,15 @@
     />
     <title>Kotmasters | Impressum</title>
     <link rel="shortcut icon" href="https://staubtornado.github.io/kotmasters/icon.ico" />
-    <!-- <link rel="stylesheet" href="./stylesheet.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://staubtornado.github.io/kotmasters/stylesheet.css">
 
 </head>
+
+<header>    
+    <script src="/loadHeader.js"></script> 
+</header>
+
 <body>
     <div class='impressum'><h1>Impressum</h1><p>Angaben gemäß § 5 TMG</p><p>Julian Kirchner <br> 
         Kornblumenweg 12<br> 
@@ -29,4 +35,7 @@
     </div>
          
 </body>
+<footer class="footer">
+    <script src="/loadFooter.js"></script> 
+  </footer>
 </html>
