Replaced local file system for JavaScript with git

--- a/content/legal/imprint.html
+++ b/content/legal/imprint.html
@@ -14,7 +14,7 @@
 </head>
 
 <header>    
-    <script src="/loadHeader.js"></script> 
+    <script src="https://staubtornado.github.io/kotmasters/loadHeader.js"></script> 
 </header>
 
 <body>
@@ -36,6 +36,6 @@
          
 </body>
 <footer class="footer">
-    <script src="/loadFooter.js"></script> 
-  </footer>
+    <script src="https://staubtornado.github.io/kotmasters/loadFooter.js"></script> 
+</footer>
 </html>
