--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -15,7 +15,7 @@
 </head>
 
 <header>
-    <script src="/loadHeader.js"></script> 
+    <script src="https://staubtornado.github.io/kotmasters/loadHeader.js"></script> 
     <h1 class="about_h1">Das sind wir</h1>
 </header>
 
@@ -24,7 +24,7 @@
 </body>
 
 <footer class="footer">
-    <script src="/loadFooter.js"></script> 
-  </footer>
+    <script src="https://staubtornado.github.io/kotmasters/loadFooter.js"></script> 
+</footer>
 
 </html>
