--- a/content/legal/datenschutzerklaerung.html
+++ b/content/legal/datenschutzerklaerung.html
@@ -14,7 +14,7 @@
 </head>
 
 <header>    
-    <script src="/loadHeader.js"></script> 
+    <script src="https://staubtornado.github.io/kotmasters/loadHeader.js"></script> 
 </header>
 
 <body>
@@ -98,7 +98,7 @@
 </body>
 
 <footer class="footer">
-    <script src="/loadFooter.js"></script> 
-  </footer>
+    <script src="https://staubtornado.github.io/kotmasters/loadFooter.js"></script> 
+</footer>
 
 </html>
