--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -9,9 +9,10 @@
         />
         <title>Kotmasters V1</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="shortcut icon" href="/icon.ico" />
-        <link rel="stylesheet" href="/stylesheet.css">
-      </head>
+        <link rel="shortcut icon" href="https://staubtornado.github.io/kotmasters/icon.ico">
+
+        <link rel="stylesheet" href="https://staubtornado.github.io/kotmasters/stylesheet.css">
+    </head>
 </head>
 
 <header>
