Head is now loaded via loadHead.js

--- a/content/legal/imprint.html
+++ b/content/legal/imprint.html
@@ -1,15 +1,11 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script>
+
     <meta
         name="description"
         content="Offizielles Impressum von Kostmasters."
     />
-    <title>Kotmasters | Impressum</title>
-    <link rel="shortcut icon" href="https://staubtornado.github.io/kotmasters/icon.ico" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://staubtornado.github.io/kotmasters/stylesheet.css">
 
 </head>
 
