--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -1,17 +1,13 @@
 <html lang="en">
 <head>
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script>
+
         <meta
           name="description"
           content="Welcome to the Kot. Dies ist die offizielle Kotmasters Website. Erkunden sie unsere Angebote."
         />
-        <title>Kotmasters V1</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="shortcut icon" href="https://staubtornado.github.io/kotmasters/icon.ico">
 
-        <link rel="stylesheet" href="https://staubtornado.github.io/kotmasters/stylesheet.css">
     </head>
 </head>
 
