--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Kotmasters | Impressum</title>
+
   <meta
     name="description"
     content="Welcome to the Kot. Dies ist die offizielle Kotmasters Website. Erkunden sie unsere Angebote."
   />
-  <title>Kotmasters V1</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="shortcut icon" href="icon.ico" />
-  <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <header>
