--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kotmasters | Impressum</title>
+    <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script>
 
-  <meta
-    name="description"
-    content="Welcome to the Kot. Dies ist die offizielle Kotmasters Website. Erkunden sie unsere Angebote."
-  />
+    <meta
+        name="description"
+        content="Offizielles Impressum von Kostmasters."
+    />
+
 </head>
 
 <header>
