Improved design of legal pages

--- a/content/legal/datenschutzerklaerung.html
+++ b/content/legal/datenschutzerklaerung.html
@@ -12,7 +12,7 @@
     <script src="https://staubtornado.github.io/kotmasters/loadHeader.js"></script> 
 </header>
 
-<body>
+<body class="legal">
     <h1>Datenschutzerklärung</h1>
     <p>Verantwortlicher im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutzgrundverordnung (DSGVO), ist:</p>
     <p>Julian Kirchner</p>
