first steps @ about-page

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -13,15 +13,47 @@
 
 <header>
     <script src="https://staubtornado.github.io/kotmasters/loadHeader.js"></script> 
-    <h1 class="about_h1">Das sind wir</h1>
 </header>
 
 <body>
-    <h2>Unsere Mitarbeiter</h2>
+    <h1 class="about_h">Unsere Ziele</h1>
+
+    <h1 class="about_h">Das ist unser Team für Sie</h1>
+    <p class="about_p"><em>"Lead Bot-Programmer"</em> und<em> "King of if - else"</em> : Julian aka. "Staubtornado"</p>
+    <p class="about_p"><em>Master of Design</em>: Max aka. "Discera"</p>
+    <p class="about_p">und <em>Lead Frontend-Developer</em>: Jannis aka. "Daywalker"</p>
+
+    <h1 class="about_h">Unser Büro</h1>
+
+    <h1 class="about_h">Unser Tochterunternehmen <em> "Kotmasters-Gaming"</em></h1>
+
 </body>
 
 <footer class="footer">
     <script src="https://staubtornado.github.io/kotmasters/loadFooter.js"></script> 
 </footer>
+
+<style>
+    .about_h{
+        color:white;
+        font-family: 'Signika Negative';
+        text-align: center;
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-top: 60px;
+        padding-bottom: 20px;
+        font-size: xx-large;
+    }
+    .about_p{
+        color:white;
+        font-family: 'Signika Negative';
+        text-align: center; 
+        padding-left: 10%;
+        padding-right: 10%; 
+        padding-top: 20px;
+        padding-bottom: 10px;
+        font-size: medium;
+    }
+</style>
 
 </html>
