start of html img slider

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -43,6 +43,55 @@
          </div>
      </div>
 
+    <h1 class="about_h">Ein Blick hinter die Kulissen</h1>
+    <!-- image slider -->
+    <div class="slider" >
+        <div class="sliders">
+
+            <!-- buttons -->
+            <input type="radio" name="radio-btn" id="btn1">
+            <input type="radio" name="radio-btn" id="btn2">
+            <input type="radio" name="radio-btn" id="btn3">
+            <input type="radio" name="radio-btn" id="btn4">
+            <!-- buttons end-->
+
+            <!-- slider imgs-->
+            <div class="slide-first">
+                <img src="#" alt="pic1">
+            </div>
+            <div class="slide">
+                <img src="#" alt="pic2">
+            </div>
+            <div class="slide">
+                <img src="#" alt="pic3">
+            </div>
+            <div class="slide">
+                <img src="#" alt="pic4">
+            </div>
+            <!-- slider imgs end-->
+
+            <!-- autorun -->
+            <div class="nav-auto">
+                <div class="auto-btn1"></div>
+                <div class="auto-btn2"></div>
+                <div class="auto-btn3"></div>
+                <div class="auto-btn4"></div>
+            </div>
+            <!-- autorun end -->
+    
+        </div>
+        <!-- manuel run  -->
+        <div class="manuel_nav">
+            <label for="btn1" class="manuel-btn"></label>
+            <label for="btn2" class="manuel-btn"></label>
+            <label for="btn3" class="manuel-btn"></label>
+            <label for="btn4" class="manuel-btn"></label>
+        </div>
+        <!-- manuel run end -->
+
+    </div>
+    <!-- image slider end-->
+
     <h1 class="about_h">Unser Büro</h1>
 
     <h1 class="about_h">Unser Tochterunternehmen <em> "Kotmasters-Gaming"</em></h1>
