Fixed project images

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </div>
  
   <ul class="short_summary">
-    <li><img src="project_1.png" alt="project_1"><a class="short_summary__font" href=""><strong>Offizielle Website</strong></a></li>
-    <li><img src="project_2.png" alt="project_2"><a class="short_summary__font" href=""><strong>Werterechner</strong></a></li>
+    <li><img src="https://staubtornado.github.io/kotmasters/images/projects/project_1.png" alt="project_1"><a class="short_summary__font" href=""><strong>Offizielle Website</strong></a></li>
+    <li><img src="https://staubtornado.github.io/kotmasters/images/projects/project_2.png" alt="project_2"><a class="short_summary__font" href=""><strong>Werterechner</strong></a></li>
   </ul>
   
 </body>   
