--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         content="Offizielles Impressum von Kostmasters."
     />
 <link rel="stylesheet" href="stylesheet.css">
+<link rel="stylesheet" href="contactButton.css">    
 </head>
 
 <header>
@@ -20,10 +21,7 @@
     Willkommen auf der Seite der Kotmasters. Wir sind ein deutsches Entwicklerstudio und arbeiten seit unserer Gründung im September 2021 an kleinen Java Programmen, Python Skripten und Webdesign mit HTML und CSS. Ab 2022 planen wir einen Einstieg in die Spieleindustrie und ab 2025 wollen wir Vorreiter in der deutschsprachigen Spiele- und Softwareentwicklung sein. Weitere Informationen findest du 
       <a href="https://staubtornado.github.io/kotmasters/content/pages/about.html"><u>hier</u></a>.
       <div class="infotext__unterschrift">- Kotmasters 2021</div>
-  </p> 
-  <div class="neo"|>
-  </div>
- 
+  </p>  
   <ul class="short_summary">
     <li><img src="https://staubtornado.github.io/kotmasters/images/projects/project_1.png" alt="project_1"><a class="short_summary__font" href=""><strong>Offizielle Website</strong></a></li>
     <li><img src="https://staubtornado.github.io/kotmasters/images/projects/project_2.png" alt="project_2"><a class="short_summary__font" href=""><strong>Werterechner</strong></a></li>
