Fixed logo in navigation bar changing position on legal pages, changed padding from 10% to 5%

--- a/content/legal/imprint.html
+++ b/content/legal/imprint.html
@@ -13,8 +13,8 @@
     <script src="https://staubtornado.github.io/kotmasters/loadHeader.js"></script> 
 </header>
 
-<body class="legal">
-    <div><h1>Impressum</h1><p>Angaben gemäß § 5 TMG</p><p>Julian Kirchner <br> 
+<body >
+    <div class="legal"><h1>Impressum</h1><p>Angaben gemäß § 5 TMG</p><p>Julian Kirchner <br> 
         Kornblumenweg 12<br> 
         65611 Brechen <br> 
         </p><p> <strong>Vertreten durch: </strong><br>
