--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -2,7 +2,7 @@
   <head>
     <head>
       <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script>
-      <link rel="stylesheet" href="https://github.com/Staubtornado/kotmasters/blob/main/about.html">
+      <link rel="stylesheet" href="Staubtornado/kotmasters/about.css">
       <meta
         name="description"
         content="Welcome to ABOUT the KOT. Dies ist die offizielle Kotmasters Aboutpage. Erkunden sie unser Team und Location."
