fixed fixed fix (added potentional fix)

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -2,7 +2,7 @@
   <head>
     <head>
       <script src="https://staubtornado.github.io/kotmasters/loadHead.js"></script>
-      <link rel="stylesheet" href="Staubtornado/kotmasters/about.css">
+      <link rel="stylesheet" href="https://staubtornado.github.io/kotmasters/about.css">
       <meta
         name="description"
         content="Welcome to ABOUT the KOT. Dies ist die offizielle Kotmasters Aboutpage. Erkunden sie unser Team und Location."
@@ -60,7 +60,7 @@
     <h1 class="about_h">Ein Blick hinter die Kulissen</h1>
 
     <!--image slider start-->
-    <link rel="stylesheet" href="https://github.com/Staubtornado/kotmasters/blob/main/sliders.css" />
+    <link rel="stylesheet" href="https://staubtornado.github.io/kotmasters/sliders.css" />
     <div class="slider_body">
       <div class="slider">
         <div class="slides">
